
DESIGN ISSUES (model):
- need a model for movement of points in ice
- why does ablation curve back towards zero when elevation < 1000m ?

DESIGN ISSUES (user interface):
- do we want to show values or relative ranges (cold-to-hot) for climate controls?
- [159] user-interface design for climate experiments

HIGH PRIORITY:
- fix for negative values in Glaciers.getMaxThickness (see comment)
- add scaling of mountains image to match scaling of other stuff in the view
- optimize ice flow vectors, use same 1D grid as ice thickness
- developer controls for ice velocity "look"?
- always collect data for time-based graphs, keep "lastest" & "historical" data points, compress historical, limit historical size
- add zoom in/out button for time-based graphs; show scrolling "latest" data or complete "historical"
- marker flags as first test of motion
- visual representation of snowfall

MEDIUM PRIORITY:
- delete ValleyNode if it is no longer used
- confirm that titles and axes on graphs are as desired
- add view of valley floor with rivers
- add moving debris
- form terminus from debris
- ice textures for above/below EQL, and in/on ice
- morph ice textures to show downvalley motion
- model borehole as a set of moving points, connected via line segments
- make mountains image big enough so that all we see is sky when the birds-eye view is made very wide
- clip equilibrium line to area where it intersects ice (what happens when it doesn't intersect ice?)
- fix layout problems with main control panel
- add pseudo-3D perspective
- adjust magnification of zoomed view?
- adjust aspect ratio?
- remove tools by dragging them back to the trash can (or toolbox?)
- refactor common module functionality into a base class
- redesign advanced climate controls
- constrain tools to dragging in birds-eye bounds
- fancy animation when a tool is dropped in the trash
- add left and right arrows to zoom view, secondary viewport control