@@ -10,7 +10,8 @@ DESIGN ISSUES (user interface):
 - [159] user-interface design for climate experiments
 
 HIGH PRIORITY:
-- fix for negative values in Glaciers.getMaxThickness (see comment)
+- new Glacier.maxThickness model results in weird ice thickness behavior near headwall
+- in Climate.updateEquilibriumLineAltitude, elevation goes way above range of interest (40500 meters)
 - add scaling of mountains image to match scaling of other stuff in the view
 - optimize ice flow vectors, use same 1D grid as ice thickness
 - developer controls for ice velocity "look"?
@@ -72,6 +73,8 @@ CLEANUP:
 
 
 DONE:
+4/14/08 - rename EquilibriumLineAltitude to ELA throughout Climate model
+4/14/08 - fix for negative values in Glaciers.getMaxThickness
 4/14/08 - fix resetAll in Basic module
 4/14/08 - fix control panel setters, no op if value is not different
 4/14/08 - reorganize the ice thickness model, improve efficiency and readability
